fix name shaders

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000013;
-	background-color: #C28D86;
+	color: #000009;
+	background-color: #BAD337;
 }
 
 #muse_css_mq
@@ -370,8 +370,8 @@
 	background-color: #EBEBEB;
 	padding: 1px;
 	text-align: left;
-	color: #000000;
 	line-height: 14px;
+	color: #000000;
 }
 
 #u24402-5:hover
@@ -556,8 +556,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 64px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -651,8 +651,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 64px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -685,8 +685,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 64px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -733,8 +733,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 1368px;
@@ -816,8 +816,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	-pie-background: rgba(0,0,0,0.4);
@@ -887,8 +887,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	-pie-background: rgba(0,0,0,0.4);
@@ -1001,8 +1001,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 336px;
@@ -1050,8 +1050,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 816px;
@@ -1099,8 +1099,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 576px;
@@ -1164,8 +1164,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 681px;
@@ -1213,8 +1213,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 96px;
@@ -1278,8 +1278,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1555,8 +1555,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 64px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1613,8 +1613,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 4px;
@@ -1695,8 +1695,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 64px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1865,8 +1865,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1922,8 +1922,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1979,8 +1979,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2036,8 +2036,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2099,8 +2099,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2184,8 +2184,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 95px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	position: relative;
 	margin-right: -10000px;
 	-pie-background: rgba(0,0,0,0.4);
@@ -2288,8 +2288,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2369,8 +2369,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2446,8 +2446,8 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	padding-top: 70px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2524,10 +2524,10 @@
 	filter: alpha(opacity=0);
 	padding-top: 60px;
 	text-align: center;
-	font-size: 30px;
-	color: #FFFFFF;
-	letter-spacing: 5px;
 	line-height: 36px;
+	letter-spacing: 5px;
+	color: #FFFFFF;
+	font-size: 30px;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
