--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 .version.about /* version checker */
 {
-	color: #000004;
-	background-color: #B20C06;
+	color: #000008;
+	background-color: #616508;
 }
 
 #muse_css_mq
@@ -178,8 +178,8 @@
 	z-index: 20;
 	width: 480px;
 	background-color: transparent;
-	line-height: 28px;
 	color: #000000;
+	line-height: 28px;
 	font-size: 16px;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
@@ -208,9 +208,9 @@
 	border-color: transparent;
 	background-color: #EBEBEB;
 	padding: 1px;
-	line-height: 14px;
 	color: #000000;
 	text-align: left;
+	line-height: 14px;
 	font-weight: bold;
 	position: relative;
 }
@@ -250,9 +250,9 @@
 	border-color: transparent;
 	background-color: #EBEBEB;
 	padding: 1px;
-	line-height: 14px;
 	color: #000000;
 	text-align: left;
+	line-height: 14px;
 	font-weight: bold;
 	margin-top: 5px;
 	position: relative;
@@ -313,8 +313,8 @@
 	padding-left: 15px;
 	padding-top: 5px;
 	padding-right: 15px;
-	line-height: 21px;
 	color: #4A4243;
+	line-height: 21px;
 	font-size: 14px;
 	font-family: quicksand, sans-serif;
 	position: relative;
